[package]
name = "boards_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4.0.0-beta.9"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
serde = "1.0.130"
serde_json = "1.0.68"
mongodb = "2.0.0"
redis = { version = "0.21.2", features = ["tokio-comp", "connection-manager"] }
thiserror = "1.0.30"
mime = "0.3.16"
tokio = "1.12.0"
tokio-stream = "0.1.7"
async-trait = "0.1.51"
actix-service = "2.0.1"
futures = "0.3.17"
pin-project = "1.0.8"